# widget-server

./: .gitignore  LICENSE.txt  Makefile  README.md  pyproject.toml
data_playground/: noise.py
frontend/public/: index.html
frontend/src/: App.css  App.tsx
notebooks/: test-notebook.ipynb
tests/: conftest.py  test_app.py  test_noise.py
widget_server/: app.py  config.py  engine.py  noise.py  repository.py  server.py
