[tool.poetry]
name = "data-playground"
version = "0.1.0"
description = ""
authors = ["Yannis Liapis <yliapis44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
matplotlib = "^3.8.2"
pandas = "^2.1.4"
duckdb = "^0.9.2"
SciPy = "^1.11.4"
numpy = "^1.26.3"
scikit-learn = "^1.3.2"
notebook = "^7.0.6"
web3 = "^6.14.0"
pydantic = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
