[tool.poetry]
name = "widget-server"
version = "0.1.0"
description = ""
authors = ["Yannis Liapis <yliapis44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
requests = "^2.31.0"
pydantic = "^2.5.3"
ruff = "^0.1.13"
mypy = "^1.8.0"
pytest = "^7.4.4"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
